--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no,email=no" />
     <meta name="format-detection" content="telephone=no">
     <title>title</title>
+    <link href="/static/js/swiper/swiper.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/vue/2.5.17/vue.js"></script>
     <script src="https://cdn.staticfile.org/element-ui/2.4.0/index.js"></script>
     <script src="https://cdn.staticfile.org/axios/0.18.0/axios.js"></script>
