--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no,email=no" />
     <meta name="format-detection" content="telephone=no">
-    <title>title</title>
+    <title>慧影云排期展示</title>
     <link href="/static/js/swiper/swiper.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/vue/2.5.17/vue.js"></script>
     <script src="https://cdn.staticfile.org/element-ui/2.4.0/index.js"></script>
