--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no,email=no" />
     <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <script src="/static/js/flexible.js"></script>
+    <!-- <meta name="viewport" content="width=1920,user-scalable=no"> -->
     <title>慧影云排期展示</title>
     <link href="/static/js/swiper/swiper.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/vue/2.5.17/vue.js"></script>
