--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="/static/js/flexible.js"></script>
     <!-- <meta name="viewport" content="width=1920,user-scalable=no"> -->
     <title>慧影云排期展示</title>
+    <script src="/static/js/swiper/swiper.min.js"></script>
     <link href="/static/js/swiper/swiper.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/vue/2.5.17/vue.js"></script>
     <script src="https://cdn.staticfile.org/element-ui/2.4.0/index.js"></script>
